fix spacing on easter image

--- a/nwcc_pyramid/static/styles/theme.css
+++ b/nwcc_pyramid/static/styles/theme.css
@@ -784,6 +784,10 @@ footer {
     height: 4.5rem;
   }
 
+  div#homeqc {
+    margin-top: -0.7rem;
+  } 
+
   .quad-container {
     margin-top: -5.4rem;
   }
@@ -799,7 +803,7 @@ footer {
 
   .welcomeimg {
     margin-top: 0;
-    margin-bottom: 5rem;
+    /* margin-bottom: 5rem; */
     /* max-height: 25rem; */
   }
 
